事業内容ページとオーナー様へページ画像張替え

--- a/service/index.html
+++ b/service/index.html
@@ -119,8 +119,8 @@
 			<li class="item" data-pararax01-opacity05="0.2">
 				<div class="photo">
 					<div class="ph">
-            <img src="../img/service/intro_img01.jpg" alt="賃貸管理" class="pc_only">
-						<img src="../img/service/intro_img01_sp.jpg" alt="賃貸管理" class="sp_only">
+            <img src="../img/service/service_Category1.jpg" alt="賃貸管理" class="pc_only">
+						<img src="../img/service/service_Category1.jpg" alt="賃貸管理" class="sp_only">
 					</div>
 					<!-- <p class="number f-playfair">Rental management</p> -->
 				</div>
@@ -133,8 +133,8 @@
 			<li class="item" data-pararax01-opacity05="0.4">
 				<div class="photo">
 					<div class="ph">
-						<img src="../img/service/intro_img02.jpg" alt="建物管理" class="pc_only">
-						<img src="../img/service/intro_img02_sp.jpg" alt="建物管理" class="sp_only">
+						<img src="../img/service/service_Category2.jpg" alt="建物管理" class="pc_only">
+						<img src="../img/service/service_Category2.jpg" alt="建物管理" class="sp_only">
 					</div>
 					<!-- <p class="number f-playfair">02</p> -->
 				</div>
@@ -148,8 +148,8 @@
 			<li class="item" data-pararax01-opacity05="0.6">
 				<div class="photo">
 					<div class="ph">
-						<img src="../img/service/intro_img03.jpg" alt="メンテナンス" class="pc_only">
-						<img src="../img/service/intro_img03_sp.jpg" alt="メンテナンス" class="sp_only">
+						<img src="../img/service/service_Category3.jpg" alt="メンテナンス" class="pc_only">
+						<img src="../img/service/service_Category3.jpg" alt="メンテナンス" class="sp_only">
 					</div>
 					<!-- <p class="number f-playfair">03</p> -->
 				</div>
@@ -163,8 +163,8 @@
 			<li class="item" data-pararax01-opacity05="0.8">
 				<div class="photo">
 					<div class="ph">
-						<img src="../img/service/intro_img04.jpg" alt="リフォーム" class="pc_only">
-						<img src="../img/service/intro_img04_sp.jpg" alt="リフォーム" class="sp_only">
+						<img src="../img/service/service_Category4.jpg" alt="リフォーム" class="pc_only">
+						<img src="../img/service/service_Category4.jpg" alt="リフォーム" class="sp_only">
 					</div>
 					<!-- <p class="number f-playfair">04</p> -->
 				</div>
@@ -180,7 +180,7 @@
 </div>
 
 <div class="service_construction" data-pararax01>
-	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/construction_img01.jpg"></div>
+	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/sevice_top1.jpg"></div>
 	<div class="container1300">
 		<div class="box" data-pararax01-opacity02="0.2">
 			<div class="box_text">
@@ -193,19 +193,19 @@
 		</div>
 		<ul class="listJob" data-pararax01>
 			<li class="item" data-pararax01-opacity05="0.0">
-				<p class="ph"><img src="../img/service/job_img01.jpg" alt="ポイント１"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP1_contet1.jpg" alt="ポイント１"></p>
 				<h4 class="ttl f-yumincho">幅広く募集を行うことで、<br>空室対策も万全。</h4>
 				<p class="txt">
 					賃貸募集に対し、独自のネットワークを構築し、弊社が培ってきたノウハウで優良な入居者様をお探しすると共に
 					早期満室に向けて、オーナー様の賃貸不動産運用を全面的にバックアップ致します。</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.2">
-				<p class="ph"><img src="../img/service/job_img02.jpg" alt="ポイント２"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP1_contet2.jpg" alt="ポイント２"></p>
 				<h4 class="ttl f-yumincho">家賃管理業務を代行し、<br>安定した家賃収入を守ります。</h4>
 				<p class="txt">もしも家賃滞納が続く場合は、入居者へ督促、さらには債権回収業者に回収代行を依頼するなど、オーナーの収益維持に努めます。<br>家賃滞納が常習化しないよう、定期的に入金確認を行い、トラブル発生時は、司法書士や弁護士事務所への依頼対応も行っております。</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.4">
-				<p class="ph"><img src="../img/service/job_img03.jpg" alt="ポイント３"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP1_contet3.jpg" alt="ポイント３"></p>
 				<h4 class="ttl f-yumincho">複雑な契約、更新管理なども<br>全てお任せください</h4>
 				<p class="txt">更新契約書の発送、申込時の勤務先等の変更の確認、火災保険、保証会社等の更新確認を行う他、契約更新や解除の際も、書面などの受け取り、退去後の修繕費用の請求も行っております。<br>トラブルを未然に防ぐためにも、有資格者のもと常に慎重に行っております。
 </p>
@@ -216,7 +216,7 @@
 </div>
 
 <div class="service_construction" data-pararax01>
-	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/construction_img01.jpg"></div>
+	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/sevice_top2.jpg"></div>
 	<div class="container1300">
 		<div class="box" data-pararax01-opacity02="0.2">
 			<div class="box_text">
@@ -228,20 +228,20 @@
 		</div>
 		<ul class="listJob" data-pararax01>
 			<li class="item" data-pararax01-opacity05="0.0">
-				<p class="ph"><img src="../img/service/job_img01.jpg"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP2_contet1.jpg"></p>
 				<h4 class="ttl f-yumincho">幅広い管理サポートを実施し、<br>入居率アップを図ります。</h4>
 				<p class="txt">入居率の下落を抑えるためには、物件の管理・メンテナンスが欠かせません。<br>
 					お預かりする不動産を大切な資産と考え、長期的に物件価値を維持するため日常清掃や定期清掃業務を実地させていたいております</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.2">
-				<p class="ph"><img src="../img/service/job_img02.jpg"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP2_contet2.jpg"></p>
 				<h4 class="ttl f-yumincho">建物のあらゆる修繕や<br>防災点検なども承ります。</h4>
 				<p class="txt">定期的に建物巡回を行い設備点検及び共用部、外周に問題がないかを確認いたします。<br>
 					大切な資産にもしもの事が無いよう防災機器の点検も念入りに行います。</p>
 
 			</li>
 			<li class="item" data-pararax01-opacity05="0.4">
-				<p class="ph"><img src="../img/service/job_img03.jpg"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP2_contet3.jpg"></p>
 				<h4 class="ttl f-yumincho">急なトラブルにも対応可能です。<br>お気軽にご連絡ください。</h4>
 				<p class="txt">入居者様のサポートはもちろんオーナー様が普段抱えている問題をを解消できるビジネスパートナーになります。<br>
 					経験豊富なスタッフが速やかにお客様へ対応させていただきます。</p>
@@ -252,7 +252,7 @@
 </div>
 
 <div class="service_construction" data-pararax01>
-	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/construction_img01.jpg"></div>
+	<div class="img" data-pararax01-opacity03="0.0"><img src="../img/service/sevice_top3.jpg"></div>
 	<div class="container1300">
 		<div class="box" data-pararax01-opacity02="0.2">
 			<div class="box_text">
@@ -265,32 +265,25 @@
 		</div>
 		<ul class="listJob" data-pararax01>
 			<li class="item" data-pararax01-opacity05="0.0">
-				<p class="ph"><img src="../img/service/job_img01.jpg"></p>
-				<h4 class="ttl f-yumincho">資産価値の維持、向上の為のご提案</h4>
+				<p class="ph"><img src="../img/service/sevice_TOP3_contet1.jpg"></p>
+				<h4 class="ttl f-yumincho">資産価値の維持、向上をサポート</h4>
 				<p class="txt">老朽化する不動産の価値を維持する方法は適確な時期に適切な修繕を施すことが最善の方法です。<br>
-												名古屋を知り尽くした弊社では、名古屋ならではの問題や向けての解決策や資産価値の向上に向けたご提案させていただきます。</p>
+												名古屋を知り尽くした弊社は、オーナー様が抱えている問題に向けて解決策や資産価値の向上を全面的にサポートいたします。</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.2">
-				<p class="ph"><img src="../img/service/job_img02.jpg"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP3_contet2.jpg"></p>
 				<h4 class="ttl f-yumincho">入居・退居にかかわるメンテナンス</h4>
 				<p class="txt">入居、退居などに伴いメンテナンスサービスをご提供しております。<br>
 												素早い対応と、丁寧なサービスは、お客様の満足度向上に繋がります。信頼の経験と実績でお客様の笑顔と満足をお約束いたします。</p>
 			</li>
 			<li class="item" data-pararax01-opacity05="0.4">
-				<p class="ph"><img src="../img/service/job_img03.jpg"></p>
+				<p class="ph"><img src="../img/service/sevice_TOP3_contet3.jpg"></p>
 				<h4 class="ttl f-yumincho">入居率を向上させるためのご提案</h4>
 				<p class="txt">空室の不安を無くすために、弊社が市場のニーズを把握し、最新の情報や多様化する顧客ニーズをご提供させていただきます。<br>
 												その情報に基づき、お部屋のリフォームもお任せください。</p>
 			</li>
 		</ul>
-		<div class="technology" data-pararax01>
-			<div class="ph"><img src="../img/service/technology_img.png"></div>
-			<div class="l_right" data-pararax01-opacity03="0.0">
-				<h4 class="f-yumincho">テキストテキスト</h4>
-				<p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
 			</div>
-		</div>
-	</div>
 
 </div>
 
