--- a/works/index.html
+++ b/works/index.html
@@ -108,7 +108,19 @@
     <p>To the owner</p>
 </div>
 <!--/page title-->
-
+<div class="philosophyArea">
+	<div class="container1100" data-pararax01>
+		<p class="txt f-yumincho" data-pararax01-opacity05="0.2">
+			不動産管理の方法は1つでは有りません。<br>
+			BONSproperty株式会社ではオーナー様のニーズに幅広く対応するため、<br>
+		要望のヒアリングから経験豊富なスタッフによる管理方法の<br>
+		ご提案・実地まで行っております。<br>
+	常に地域に寄り添ってきた弊社が培ってきたノウハウや、<br>
+	管理企業ならではの実績に裏打ちされたコンサルティングと<br>
+	ご要望に合わせた４種類の管理システムで<br>
+	オーナー様の負担を軽減致します。</p>
+	</div>
+</div>
 <!--works list-->
 <section class="works_wrap" data-pararax01>
 	<div class="service_construction" data-pararax01>
@@ -125,8 +137,8 @@
 													プランです<br>
 												また、日常の煩わしい賃貸管理・運営業務をすべて弊社が代行して行います。</p>
 				</div>
-				<div>
-					</div>
+			</div>
+		</div>
 	</div>
 	<div class="service_construction" data-pararax01>
 
@@ -135,11 +147,11 @@
 								<div class="box_text">
 									<div class="box_text_container">
 									<h2 class="txt">滞納保証システム<br><span class="f-playfair">安定した収入を求める方向け</span></h2>
-										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
+										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_04.jpg">
 										</div>
 										<p class="comment">家主様の代理として入居者募集・契約締結・入居後の賃貸管理運営など全ての業務を代行します。<br>
-																			借主の家賃滞納・遅延時でも当社が借主に代わり賃料を補償し早急に入金いたします。
-																			＊空室時の家賃は入金はございません。ご了承ください。</p>
+																			借主の家賃滞納・遅延時でも当社が借主に代わり賃料を補償し早急に入金いたします。<br>
+																			<span class="f_red">＊空室時の家賃は入金はございません。ご了承ください。</span></p>
 								</div>
 							</div>
 						</div>
@@ -151,22 +163,21 @@
 								<div class="box_text">
 									<div class="box_text_container">
 										<h2 class="txt">集金代行システム<br><span class="f-playfair">手間を書けたくない方向け</span></h2>
-										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
+										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_05.jpg">
 									</div>
-										<p class="comment">借主の家賃滞納・遅延時には、早急に催促や集金を行うといったきめ細かい入金対応を致します。
-																			＊空室時・滞納時の家賃の入金はございません。ご了承ください。</p>
+										<p class="comment">借主の家賃滞納・遅延時には、早急に催促や集金を行うといったきめ細かい入金対応を致します。<br>
+																			<span class="f_red">＊空室時・滞納時の家賃の入金はございません。ご了承ください。</span></p>
 								</div>
 							</div>
 						</div>
 			</div>
-	</div>
 	<div class="service_construction" data-pararax01>
 						<div class="container1300">
 							<div class="box" data-pararax01-opacity02="0.2">
 								<div class="box_text">
 									<div class="box_text_container">
 										<h2 class="txt">専任管理システム<br><span class="f-playfair">専門分野のみを任せたい方向け</span></h2>
-										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
+										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_06.jpg">
 									</div>
 									<p class="comment">家主様の方で直接入居者と賃貸借契約を結んでいただきます。<br>
 																		管理手数料は発生いたしません。入居後は契約更新・解約業務などの業務を代行致します<br>
@@ -176,140 +187,6 @@
 							</div>
 						</div>
 			</div>
-<!--
-    <h3>
-		ALL	</h3>
-
-    <div class="wrap_list">
-		        <article>
-            <a href="river-ishikari-05/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/06/IMG_02-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															河川									</p>
-                <h4 data-pararax01-opacity05="0.0">石狩川改修工事の内　嶮淵川築堤盛土外工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="river-ishikari-04/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-13-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															河川									</p>
-                <h4 data-pararax01-opacity05="0.0">石狩川改修工事の内　東の里遊水地周囲提盛土工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="river-ishikari-03/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-8-1024x576.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															河川									</p>
-                <h4 data-pararax01-opacity05="0.0">石狩川改修工事の内　南幌築堤外工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="river-ishikari-02/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-14-1024x576.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															河川									</p>
-                <h4 data-pararax01-opacity05="0.0">石狩川改修補償工事の内　南4号半排水機場撤去外工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="river-ishikari-01/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-15-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															河川									</p>
-                <h4 data-pararax01-opacity05="0.0">石狩川改修工事の内　石狩川左岸河道掘削工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="port-shinchitose-05/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/06/DSCN2628-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															空港・港湾									</p>
-                <h4 data-pararax01-opacity05="0.0">新千歳空港　管理道路整備外工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="port-kushiro-02/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/06/P07-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															空港・港湾									</p>
-                <h4 data-pararax01-opacity05="0.0">釧路港新西防波提建設工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="port-shinchitose-04/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-7-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															空港・港湾									</p>
-                <h4 data-pararax01-opacity05="0.0">新千歳空港　誘導路東側外工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="port-shinchitose-03/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-9-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															空港・港湾									</p>
-                <h4 data-pararax01-opacity05="0.0">新千歳空港　誘導路新設工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="port-kushiro-01/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-10-1024x576.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															空港・港湾									</p>
-                <h4 data-pararax01-opacity05="0.0">釧路港西港区－14m岸壁B・C部本体工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="port-shinchitose-02/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-11-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															空港・港湾									</p>
-                <h4 data-pararax01-opacity05="0.0">新千歳空港　滑走路端安全区域用地造成外工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="port-shinchitose-01/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-12-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															空港・港湾									</p>
-                <h4 data-pararax01-opacity05="0.0">新千歳空港　ローカライザー外用地造成工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="road-ebetsukita-02/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/06/DJI_03-1024x682.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															道路									</p>
-                <h4 data-pararax01-opacity05="0.0">一般国道275号　江別市　江別北改良工事</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="road-tukigata/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/06/DJI_04-1024x682.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															道路									</p>
-                <h4 data-pararax01-opacity05="0.0">月形幌向線　防A100地方道工事(上部架設工)(翌債)</h4>
-            </a>
-		</article>
-			        <article>
-            <a href="road-minaminaganuma/index.html" data-pararax01-opacity05="0.0">
-                <img class="ofi" src="../uploads/2020/01/1-6-1024x768.jpg" alt="" data-pararax01-opacity05="0.0">
-                <p data-pararax01-opacity05="0.0">
-															道路									</p>
-                <h4 data-pararax01-opacity05="0.0">道央圏連絡道路　長沼町　南長沼改良工事</h4>
-            </a>
-		</article>
-		    </div>
-
-    <div class="page_num_wrap">
-		<ul>
-			<li class="current">1</li>
-<li><a class='page-numbers' href='page/2/index.html'>2</a></li>
-        </ul>
-    </div>
- -->
 </section>
 <!--/works list-->
 <!--パンくず-->
