オーナー様へページレスポンシブ

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <div class="pc_only" data-pararax01-opacity05="0.6"><img alt="" src="img/top_service_intro_ph.jpg"></div>
                 <div class="sp_only" data-pararax01-opacity05="0.6"><img alt="" src="img/top_service_intro_ph_sp.jpg"></div>
             </div>
-            <!--山田組の仕事-->
+            <!--弊社が選ばれる理由-->
             <div class="container1300 service_works_wrapper" data-pararax01>
                 <div class="service_works_text" data-pararax01-opacity03="0.2">
                     <h4>弊社が選ばれる理由</h4>
@@ -178,70 +178,27 @@
                 </div>
                 <div class="service_works_photo" data-pararax01-opacity02="0.4"><img alt="" src="img/top_service_works_ph02.jpg"></div>
             </div>
-            <!--/山田組の仕事-->
+            <!--/仕事-->
             <div class="more_btn">
                 <a href="service/index.html">事業内容</a>
             </div>
         </section>
         <!--/事業内容-->
-        <!--施工実績-->
+        <!--オーナー様へ-->
         <section id="works" data-pararax01>
             <div class="container1100" data-pararax01-opacity02="0.0">
                 <!--タイトル-->
                 <div class="works_ttl_box">
                     <div class="section_ttl">
-                        <h3>オーナー様へ<!-- <span>Works</span> --></h3>
+                        <h3>オーナー様へ</h3>
                     </div>
                     <div class="vBorder"></div>
-                    <div class="more_btn_white pc_only">
+                    <div class="more_btn_white">
                         <a href="works/index.html">オーナー様へ</a>
                     </div>
                 </div>
                 <!--/タイトル-->
-                <!--施工実績一覧-->
-                <div class="works_case_wrapper">
-                    <div class="works_case_box">
-                        <a href="works/river-ishikari-05/index.html">
-                            <div class="works_case_photo"><img class="ofi" alt="" src="uploads/2020/06/IMG_02-1024x768.jpg"></div>
-                            <div class="works_case_text">
-                                <span> 河川 </span>
-                                <h4>石狩川改修工事の内　嶮淵川築堤盛土外工事</h4>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_case_box">
-                        <a href="works/river-ishikari-04/index.html">
-                            <div class="works_case_photo"><img class="ofi" alt="" src="uploads/2020/01/1-13-1024x768.jpg"></div>
-                            <div class="works_case_text">
-                                <span> 河川 </span>
-                                <h4>石狩川改修工事の内　東の里遊水地周囲提盛土工事</h4>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_case_box">
-                        <a href="works/river-ishikari-03/index.html">
-                            <div class="works_case_photo"><img class="ofi" alt="" src="uploads/2020/01/1-8-1024x576.jpg"></div>
-                            <div class="works_case_text">
-                                <span> 河川 </span>
-                                <h4>石狩川改修工事の内　南幌築堤外工事</h4>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="works_case_box">
-                        <a href="works/river-ishikari-02/index.html">
-                            <div class="works_case_photo"><img class="ofi" alt="" src="uploads/2020/01/1-14-1024x576.jpg"></div>
-                            <div class="works_case_text">
-                                <span> 河川 </span>
-                                <h4>石狩川改修補償工事の内　南4号半排水機場撤去外工事</h4>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <!--施工事例一覧-->
-                <div class="more_btn_white sp_only">
-                    <a href="works/index.html">施工実績一覧</a>
-                </div>
-            </div>
+
         </section>
         <!--/施工事例-->
         <!--採用情報-->
@@ -256,9 +213,8 @@
                     <h4>未来の名古屋が<br> あなたを待っている！
                     </h4>
                     <p>不動産建物管理事業を安定的に行いながら、
-                      不動産賃貸などいわゆる「安定的収益が期待できる事業」に注力し、
+                      不動産賃貸など「安定的収益が期待できる事業」で
                       事業収益力の強化を図ります。
-                      さらにリフォーム業やメンテナンス業にも注力し収益力の向上を図ります。
                       これらを基本戦略として更なる安定と成長を目指しています。
                       安定と成長は相反する目標と思われるかもしれませんが、
                       それも地元に根ざした信頼があるからこそ可能な目標と言えるでしょう。<br>
