オーナー様へページレスポンシブ完成

--- a/works/index.html
+++ b/works/index.html
@@ -112,9 +112,9 @@
 	<div class="container1100" data-pararax01>
 		<p class="txt f-yumincho" data-pararax01-opacity05="0.2">
 			不動産管理の方法は1つでは有りません。<br>
-			BONSproperty株式会社ではオーナー様のニーズに幅広く対応するため、<br>
-		要望のヒアリングから経験豊富なスタッフによる管理方法の<br>
-		ご提案・実地まで行っております。<br>
+			BONSproperty株式会社では<br class="sp_only">オーナー様のニーズに幅広く対応するため、<br>
+		要望のヒアリングから経験豊富なスタッフによる<br class="sp_only">管理方法の<br class="pc_only">
+		ご提案・実地まで行っております。<br class="sp_only"><br class="pc_only">
 	常に地域に寄り添ってきた弊社が培ってきたノウハウや、<br>
 	管理企業ならではの実績に裏打ちされたコンサルティングと<br>
 	ご要望に合わせた４種類の管理システムで<br>
@@ -125,7 +125,7 @@
 <section class="works_wrap" data-pararax01>
 	<div class="service_construction" data-pararax01>
 
-		<div class="container1300">
+		<div class="container1300" id="p_lr_sp">
 			<div class="box" data-pararax01-opacity02="0.2">
 				<div class="box_text">
 					<div class="box_text_container">
@@ -142,7 +142,7 @@
 	</div>
 	<div class="service_construction" data-pararax01>
 
-						<div class="container1300">
+						<div class="container1300" id="p_lr_sp">
 							<div class="box" data-pararax01-opacity02="0.2">
 								<div class="box_text">
 									<div class="box_text_container">
@@ -158,7 +158,7 @@
 	</div>
 
 	<div class="service_construction" data-pararax01>
-						<div class="container1300">
+						<div class="container1300" id="p_lr_sp">
 							<div class="box" data-pararax01-opacity02="0.2">
 								<div class="box_text">
 									<div class="box_text_container">
@@ -172,7 +172,7 @@
 						</div>
 			</div>
 	<div class="service_construction" data-pararax01>
-						<div class="container1300">
+						<div class="container1300" id="p_lr_sp">
 							<div class="box" data-pararax01-opacity02="0.2">
 								<div class="box_text">
 									<div class="box_text_container">
