ホバー時のカラー変更

--- a/privacy_policy/index.html
+++ b/privacy_policy/index.html
@@ -118,7 +118,7 @@
     <div class="content">
         <div class="container1100">
             <p class="top">
-                株式会社山田組（以下「当社」とします）は、より良い商品やサービスを提供し社会の発展に寄与するため、<br class="pc_only">
+                BONDS property株式会社（以下「当社」とします）は、より良い商品やサービスを提供し社会の発展に寄与するため、<br class="pc_only">
                 お客様やお取引先様からお預かりした情報資産および当社の情報資産を守ることが責務と考え、<br class="pc_only">
                 ここに個人情報保護方針を定め、実践することを宣言します。
             </p>
@@ -144,7 +144,7 @@
                     <p class="txt">当社は、個人情報保護マネジメントシステムの継続的改善を行ないます。</p>
                 </li>
                 <li class="item">
-                    <p class="txt">株式会社山田組<br>代表取締役社長　山田 健一郎</p>
+                    <p class="txt">BONDS property株式会社<br>代表取締役社長　間宮俊之</p>
                 </li>
             </ol>
         </div>
