--- a/service/index.html
+++ b/service/index.html
@@ -112,8 +112,8 @@
 <div class="container1300 service_intro">
 	<div class="in" data-pararax01>
 		<div  data-pararax01-opacity05="0.0">
-			<h3 class="f-yumincho">専門スタッフがオーナー様に<br>代わって煩雑な管理業務を
-責任持って代行し、<br>安定した収入と資産価値の向上に努めてまいります。</h3>
+			<h3 class="f-yumincho">専門スタッフがオーナー様に<br class="pc_only">代わって<br class="sp_only">煩雑な管理業務を
+責任持って代行し、<br class="sp_only"><br class="pc_only">安定した収入と資産価値の向上に<br class="sp_only">努めてまいります。</h3>
 		</div>
 		<ul class="introList">
 			<li class="item" data-pararax01-opacity05="0.2">
@@ -125,7 +125,6 @@
 					<!-- <p class="number f-playfair">Rental management</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">賃貸管理</h4>
 					<p>弊社は貸主様と借主様との関係性をより良く変えていきます。全ては、この地域をより良く、より幸せにするために。<br>家賃集金・入退去時フォローなどの家主業務代行から、
 						建物のメンテナンスに至るまで、オーナー様の賃貸不動産運用を全面的にサポート致します。</p>
 				</div>
@@ -139,7 +138,6 @@
 					<!-- <p class="number f-playfair">02</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">建物管理</h4>
 					<p>オーナーさまの大切な資産を維持するのはもとより、「住んでよかった」、「住み続けたい」という入居者さまの「満足度」にも直結します。<br>
 ただ「器」として住まいを提供するものではなく、安全や安心、心地よさも提供するものであるという視点で、管理を行っています。
 </p>
@@ -154,7 +152,6 @@
 					<!-- <p class="number f-playfair">03</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">メンテナンス</h4>
 					<p>建物の維持管理、美観の保持、入居促進や入居者の満足度を高めることにつながります。<br>
 						弊社では自社のメンテナンススタッフによる清掃体制を整えていますので、充実した内容ながらも価格を抑えたお得なメンテナンスプランをご提案しています。
 </p>
@@ -169,7 +166,6 @@
 					<!-- <p class="number f-playfair">04</p> -->
 				</div>
 				<div class="box">
-					<h4 class="f-yumincho">リフォーム</h4>
 					<p>しっかりした現状認識と、夢を現実のものにするための技術力が不可欠なのです。
 						弊社はそうした総合的な力を身につけた、リフォームの達人、私たちはそのように自負し、
 						さらに精進を重ねています。</p>
