プラポリ訂正

--- a/contact/index.html
+++ b/contact/index.html
@@ -119,7 +119,7 @@
 
 
 
-				<form id="Form" autocomplete="on" enctype="multipart/form-data" name="form" method="post" action="https://www.yamada-gumi.co.jp/contact/" class="formArea">
+				<form id="Form" autocomplete="on" enctype="multipart/form-data" name="form" method="post" action="" class="formArea">
 					<div class="content">
 
 								<input type="hidden" name="ticketid" value="15369920">
