--- a/works/index.html
+++ b/works/index.html
@@ -13,10 +13,10 @@
 <link href="../slick/slickef31.css?update=20200217144720" rel="stylesheet">
 <link href="../slick/slick-themea68f.css?update=20200217144719" rel="stylesheet">
 <link rel="canonical" href="index.html">
-<!-- <meta name="description" content="株式会社山田組の施工実績をご紹介。北海道の河川工事、空港・港湾工事、道路工事、鉄道工事など、創業から100年以上実績を積み重ねてきた山田組の代表作を掲載しています。"> -->
+<meta name="description" content="BONSproperty株式会社の管理方法をご紹介。オーナー様に最適な管理方法をご提案します。">
 <meta name="robots" content="">
 <meta property="og:title" content="オーナー様へ | BONSproperty株式会社">
-<!-- <meta property="og:description" content="株式会社山田組の施工実績をご紹介。北海道の河川工事、空港・港湾工事、道路工事、鉄道工事など、創業から100年以上実績を積み重ねてきた山田組の代表作を掲載しています。"> -->
+<meta property="og:description" content="BONSproperty株式会社の管理方法をご紹介。オーナー様に最適な管理方法をご提案します。">
 <meta property="og:url" content="https://bonds-property.co.jp/">
 <meta property="og:image" content="common/img/og.png">
 <link href="../favicon.ico" rel="icon">
@@ -132,7 +132,7 @@
 					<h2 class="txt">家賃保証システム<br><span class="f-playfair">確かな安心を求める方向け</span></h2>
 						<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_03.jpg">
 						</div>
-					<p class="comment">家主様の建物（マンション・ビル）を借り上げて転貸するシステムです。<br>
+					<p class="comment">オーナー様の建物（マンション・ビル）を借り上げて転貸するシステムです。<br>
 														入居者の有無や家賃の遅延・滞納時に関わることなく安定した家賃収入が保証されますので、長期返済の家主様にもご安心出来る
 													プランです<br>
 												また、日常の煩わしい賃貸管理・運営業務をすべて弊社が代行して行います。</p>
@@ -149,7 +149,7 @@
 									<h2 class="txt">滞納保証システム<br><span class="f-playfair">安定した収入を求める方向け</span></h2>
 										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_04.jpg">
 										</div>
-										<p class="comment">家主様の代理として入居者募集・契約締結・入居後の賃貸管理運営など全ての業務を代行します。<br>
+										<p class="comment">弊社が代理として入居者募集・契約締結・入居後の賃貸管理運営など全ての業務を代行します。<br>
 																			借主の家賃滞納・遅延時でも当社が借主に代わり賃料を補償し早急に入金いたします。<br>
 																			<span class="f_red">＊空室時の家賃は入金はございません。ご了承ください。</span></p>
 								</div>
@@ -179,7 +179,7 @@
 										<h2 class="txt">専任管理システム<br><span class="f-playfair">専門分野のみを任せたい方向け</span></h2>
 										<img class="img" data-pararax01-opacity03="0.0" src="../img/manager_06.jpg">
 									</div>
-									<p class="comment">家主様の方で直接入居者と賃貸借契約を結んでいただきます。<br>
+									<p class="comment">オーナー様の方で直接入居者と賃貸借契約を結んでいただきます。<br>
 																		管理手数料は発生いたしません。入居後は契約更新・解約業務などの業務を代行致します<br>
 																	具体的には、家主様への借主解約のご連絡から退居時の立ち合い、原状回復工事の見積りなどの手続き、
 																そしてこれまで培ってきた弊社のノウハウを駆使した入居者募集をさせていただきます。</p>
@@ -199,7 +199,7 @@
 		    <p>オーナー様へ</p>
                     <li>
     </ul>
-</div><!-- /.mod_breadcrumblist -->
+</div>
 <!--/パンくず-->
 
 </main>
@@ -250,6 +250,4 @@
 <!--/先頭に戻る-->
 
 </body>
-
-<!-- Mirrored from www.yamada-gumi.co.jp/works/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Nov 2020 06:04:01 GMT -->
 </html>
