--- a/company/index.html
+++ b/company/index.html
@@ -100,7 +100,7 @@
 <section id="company">
 
 	<div id="mv" class="company_mv">
-		<h3 class="section_kasou_ttl f-yumincho">会社案内<span class="f-playfair">Company</span></h3>
+		<h3 class="section_kasou_ttl f-yumincho">会社概要<span class="f-playfair">Company</span></h3>
 	</div>
 	<div data-pararax01>
 		<div class="container1300 company_intro_text">
@@ -246,7 +246,7 @@
             <a href="../index.html">TOPページ</a>
                     </li>
         <li>
-		    <p>会社案内</p>
+		    <p>会社概要</p>
                     <li>
     </ul>
 </div><!-- /.mod_breadcrumblist -->
@@ -280,7 +280,7 @@
 </ul>
 </div>
 
-<p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
+<p>Copyright &copy; © 2020 BONDS property. All rights reserved.</p>
 
 </div>
 
