--- a/privacy_policy/index.html
+++ b/privacy_policy/index.html
@@ -69,7 +69,7 @@
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
-<li><a href="../company/index.html">会社案内</a></li>
+<li><a href="../company/index.html">会社概要</a></li>
 <li><a href="../service/index.html">事業内容</a></li>
 <li><a href="../works/index.html">オーナー様へ</a></li>
 <li><a href="../recruit/index.html">採用情報</a></li>
@@ -193,7 +193,7 @@
 <li><a href="index.html">個人情報保護方針</a></li>
 </ul>
 </div>
-<p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
+<p>Copyright &copy; © 2020 BONDS property. All rights reserved.</p>
 
 </div>
 
