--- a/service/index.html
+++ b/service/index.html
@@ -70,7 +70,7 @@
 <nav>
 <ul>
 <li class="active"><a href="../index.html">TOP</a></li>
-<li><a href="../company/index.html">会社案内</a></li>
+<li><a href="../company/index.html">会社概要</a></li>
 <li><a href="index.html">事業内容</a></li>
 <li><a href="../works/index.html">オーナー様へ</a></li>
 <li><a href="../recruit/index.html">採用情報</a></li>
@@ -365,7 +365,7 @@
 </ul>
 </div>
 
-<p>Copyright &copy; © 2018 BONDS property. All rights reserved.</p>
+<p>Copyright &copy; © 2020 BONDS property. All rights reserved.</p>
 
 </div>
 
